--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test:watch": "jest --watchAll --verbose=false"
   },
   "devDependencies": {
-    "jest": "^27.0.4",
+    "jest": "^27.5.1",
     "jest-html-reporter": "^3.3.0",
     "jest-junit": "^12.0.0"
   },
@@ -36,6 +36,7 @@
     "trailingComma": "none"
   },
   "dependencies": {
-    "browserify": "^17.0.0"
+    "browserify": "^17.0.0",
+    "runner": "^4.0.0"
   }
 }
